--- a/python/docker-compose.yml
+++ b/python/docker-compose.yml
@@ -36,7 +36,7 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - VITE_API_URL=http://localhost:8000/api
+      - VITE_API_URL=http://54.90.114.21/api
     depends_on:
       - backend
     networks:
