--- a/python/Dockerfile.frontend
+++ b/python/Dockerfile.frontend
@@ -1,37 +1,44 @@
-# Frontend Dockerfile
+# ===============================
+# 1) BUILD STAGE
+# ===============================
 FROM node:20-alpine AS builder
 
 WORKDIR /app
 
-# Copy package files
-COPY frontend/package*.json ./
+# Force devDependencies installation (vite lives here)
+ENV NODE_ENV=development
 
 # Install dependencies
-RUN npm ci
+COPY frontend/package*.json ./
+RUN npm ci --include=dev
 
-# Copy source code
-COPY frontend/ .
+# Copy project files
+COPY frontend/ ./
 
-# Build the app
+# FIX vite permission bug for Alpine (very common)
+RUN chmod +x node_modules/.bin/vite
+
+# Build the Vite app
 RUN npm run build
 
-# Production stage
+
+# ===============================
+# 2) PRODUCTION STAGE
+# ===============================
 FROM node:20-alpine
 
 WORKDIR /app
 
-# Install serve to run the production build
+# Install static file server
 RUN npm install -g serve
 
-# Copy built app from builder
+# Copy built files from builder
 COPY --from=builder /app/dist ./dist
 
-# Expose port
 EXPOSE 3000
 
-# Health check
+# Healthcheck
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
     CMD wget --quiet --tries=1 --spider http://localhost:3000/ || exit 1
 
-# Run the application
 CMD ["serve", "-s", "dist", "-l", "3000"]
